--- a/README
+++ b/README
@@ -3,12 +3,13 @@ dbgutils - This mini-library contains a number of routines I find useful for deb
 - Routines to print backtraces (stack traces) at arbitrary points in code
 - A generic dump( val ) routine for debugging purposes.
 - A set of assert macros with support for backtraces, trapping to the debugger, abort/noabort variants, etc..
+- A set of requires (precondition) and ensures (postcondition) macros which expand out to code for checking the given conditions at the appropriate points.  
 
 Usage: 
 - The library is primarily intended for C++11.  However, it can also be built (with some missing features) by a C compiler.  Currently, there is not a C++98 mode, but one could be added if desired.
 - The Makefile provided generates a libdbgutils.so library that you can link against.  Alternatively, you can simply add the source files to your existing build system.  
 - To get everything, you should either add a _DEBUG macro to your build environment or look into the DBGUTILS_ENABLE_* macros.
-- You will need libunwind installed to build the backtrace routines.
+- By default, you will need libunwind installed to build the backtrace routines.  Alternatively, you can use the NO_LIBUNDWIND macro provided to exclude backtracing functionality.
 
 Provided under a BSD 3-clause license.
 
